# trajetorias-discentes-bcc

./: README.md  TODO.md  main.py  matriculas_cfes.yaml  pyproject.toml  vagas_cfes.yaml
content/: ideias jogadas.md  ideias_organizadas.md  refs_trabalhos_anteriores.md
content/reuni/: 20260302_definindo_titulo_descricao.md  20260302_discutindo_possiveis_topicos.md
data/doc/: glossario_dados_abertos_ufabc.yaml
src/: __base_notebook.ipynb
src/utils/: __init__.py  downloading_files.ipynb  file_downloader.py  logger.py  pdf_downloader.py
tests_experiments_examples/: downloading_cmcc_syllabus.py  local_testing_crawler.ipynb  plotting_vagas_anos.ipynb  testing_google_cloud_library.py  ufabc_open_data_downloader.py
